<resources>
    <string name="app_name">Practica2Form233410</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>


    <!--Codigo Extra-->
    <string name="name">Name</string>
    <string name="choose_gender">Choose your gender</string>
    <string-array name="gender_options">
        <item>Man</item>
        <item>Woman</item>
        <item>Other</item>
    </string-array>
</resources>